fix: heroimage title with shade to have it readable

--- a/frontend/theme/extras/header.less
+++ b/frontend/theme/extras/header.less
@@ -681,8 +681,8 @@ body.has-hero-image {
         margin-bottom: 0px;
         background-image: linear-gradient(
           to top,
-          rgba(0, 0, 0, 0.5) 0%,
-          rgba(0, 0, 0, 0) 70%
+          rgba(0, 0, 0, 0.75) 0%,
+          rgba(0, 0, 0, 0) 100%
         );
         background-repeat: repeat-x;
         pointer-events: all;
